// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionTray should not render home link if showHome prop is explicitly false 1`] = `
<div
  className="root"
>
  <div
    className="actionTrayTab"
  />
  <div
    className="menuToggle"
    onClick={[MockFunction]}
  >
    <Icon
      animation=""
      rotation=""
      size=""
      smoothRotate={false}
      svgClassName="svg"
      type="menu"
    />
  </div>
</div>
`;

exports[`ActionTray should not render menu button if showMenu prop is explicitly false 1`] = `
<div
  className="root"
>
  <div
    className="actionTrayTab"
  />
  <div
    className="actionTrayTab"
  />
</div>
`;

exports[`ActionTray should not render search link if showSearch prop is explicitly false 1`] = `
<div
  className="root"
>
  <div
    className="actionTrayTab"
  />
  <div
    className="menuToggle"
    onClick={[MockFunction]}
  >
    <Icon
      animation=""
      rotation=""
      size=""
      smoothRotate={false}
      svgClassName="svg"
      type="menu"
    />
  </div>
</div>
`;

exports[`ActionTray should not render tray if showTray prop is explicitly false 1`] = `""`;

exports[`ActionTray should render with country hk 1`] = `
<div
  className="root"
>
  <div
    className="actionTrayTab"
  />
  <div
    className="actionTrayTab"
  />
  <div
    className="menuToggle"
    onClick={[MockFunction]}
  >
    <Icon
      animation=""
      rotation=""
      size=""
      smoothRotate={false}
      svgClassName="svg"
      type="menu"
    />
  </div>
</div>
`;

exports[`ActionTray should render with default props 1`] = `
<div
  className="root"
>
  <div
    className="actionTrayTab"
  />
  <div
    className="actionTrayTab"
  />
  <div
    className="menuToggle"
    onClick={[MockFunction]}
  >
    <Icon
      animation=""
      rotation=""
      size=""
      smoothRotate={false}
      svgClassName="svg"
      type="menu"
    />
  </div>
</div>
`;

exports[`ActionTray should render with home tab active 1`] = `
<div
  className="root"
>
  <div
    className="actionTrayTab"
  >
    <Icon
      animation=""
      rotation=""
      size=""
      smoothRotate={false}
      svgClassName="svg activeActionTrayIcon"
      type="home"
    />
  </div>
  <div
    className="actionTrayTab"
  />
  <div
    className="menuToggle"
    onClick={[MockFunction]}
  >
    <Icon
      animation=""
      rotation=""
      size=""
      smoothRotate={false}
      svgClassName="svg"
      type="menu"
    />
  </div>
</div>
`;

exports[`ActionTray should render with login available 1`] = `
<div
  className="root"
>
  <div
    className="actionTrayTab"
  />
  <div
    className="actionTrayTab"
  />
  <div
    className="menuToggle"
    onClick={[MockFunction]}
  >
    <Icon
      animation=""
      rotation=""
      size=""
      smoothRotate={false}
      svgClassName="svg"
      type="menu"
    />
  </div>
</div>
`;

exports[`ActionTray should render with menu open 1`] = `
<div
  className="root"
>
  <div
    className="menuToggle"
    onClick={[MockFunction]}
  >
    <Icon
      animation=""
      rotation=""
      size=""
      smoothRotate={false}
      svgClassName="svg"
      type="home"
    />
  </div>
  <div
    className="actionTrayTab"
  />
  <div
    className="menuToggle"
    onClick={[MockFunction]}
  >
    <Icon
      animation=""
      rotation=""
      size=""
      smoothRotate={false}
      svgClassName="svg activeActionTrayIcon"
      type="menu"
    />
  </div>
</div>
`;

exports[`ActionTray should render with search tab active 1`] = `
<div
  className="root"
>
  <div
    className="actionTrayTab"
  />
  <div
    className="actionTrayTab"
  >
    <Icon
      animation=""
      rotation=""
      size=""
      smoothRotate={false}
      svgClassName="svg activeActionTrayIcon"
      type="search"
    />
  </div>
  <div
    className="menuToggle"
    onClick={[MockFunction]}
  >
    <Icon
      animation=""
      rotation=""
      size=""
      smoothRotate={false}
      svgClassName="svg"
      type="menu"
    />
  </div>
</div>
`;
